--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
+*.a
+*.bundle
+*.gem
+*.o
+*.so
 /.bundle/
 /.yardoc
-/Gemfile.lock
 /_yardoc/
 /coverage/
 /doc/
+/Gemfile.lock
 /pkg/
 /spec/reports/
 /tmp/
-*.bundle
-*.so
-*.o
-*.a
 mkmf.log
